#9 -Created a "Mes Reservations" tab displaying the user's reservations - Added the ability to delete a reservation - Display success or error messages

--- a/templates/favorite/index.html.twig
+++ b/templates/favorite/index.html.twig
@@ -67,6 +67,7 @@
                     return response.json();
                 })
                 .then(data => {
+                    //Afficher message d'erreur
                     const messageDiv = document.getElementById('message');
                     messageDiv.style.display = 'block';
                     messageDiv.innerText = data.message;
