--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,6 +44,7 @@
                     <li class="nav-item"><a class="nav-link" href="/user/map">Accueil</a></li>
                     <li class="nav-item"><a class="nav-link" href="/user/profile">Profil</a></li>
                     <li class="nav-item"><a class="nav-link" href="/user/favorite">Mes favoris</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/user/reservation">Mes réservations</a></li>
                     <li class="nav-item"><a class="nav-link" href="/a_propos">À propos</a></li>
                     <li class="nav-item"><a class="nav-link" href="/logout">Se déconnecter</a></li>
                 </ul>
