--- a/templates/blocked/index.html.twig
+++ b/templates/blocked/index.html.twig
@@ -1,4 +1,7 @@
+{% extends 'base.html.twig' %}
+
 {% block content %}
     <h1>Account Blocked</h1>
     <p>Your account has been blocked. Please contact support for further assistance.</p>
+    <a href="/logout">se connecter avec un autre compte</a>
 {% endblock %}
