--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -79,7 +79,7 @@
 
 <footer class="mt-auto">
     <div class="container">
-        <p>&copy; 2024 MonProjet. Tous droits réservés.</p>
+        <p>&copy; 2024 Veliko. Tous droits réservés.</p>
         <a href="/mention/legal" class="footer-link">Mentions légales</a> |
         <a href="/politique_confidentialite" class="footer-link">Politique de confidentialité</a> |
         <a href="/contact" class="footer-link">Contact</a>
