--- a/templates/security/index.html.twig
+++ b/templates/security/index.html.twig
@@ -63,6 +63,7 @@
             border: none;
             transition: background-color 0.3s;
         }
+
         .btn-primary:hover {
             background-color: #0056b3;
         }
@@ -84,13 +85,13 @@
             </div>
         {% endif %}
 
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <h1 class="h3 mb-3 font-weight-normal">Veuillez vous connecter</h1>
 
         <form method="post">
             <label for="username">Email : </label>
             <input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
 
-            <label for="password">Password : </label>
+            <label for="password">Mot de passe : </label>
             <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
 
             {# Message d'erreur #}
@@ -109,8 +110,8 @@
 
             {# Boutons Sign in et Register en dessous du lien #}
             <div class="button-group">
-                <button class="btn btn-lg btn-primary" type="submit">Sign in</button>
-                <a class="btn btn-lg btn-relocate register" href="/register">Register</a>
+                <button class="btn btn-lg btn-primary" type="submit">Se connecter</button>
+                <a class="btn btn-lg btn-relocate register" href="/register">S'enregistrer</a>
             </div>
         </form>
     </div>
