--- a/templates/registration/index.html.twig
+++ b/templates/registration/index.html.twig
@@ -135,7 +135,7 @@
             {{ form_row(registrationForm.agreeTerms) }}
         </div>
 
-        <button type="submit" class="btn">Register</button>
+        <button type="submit" class="btn">S'enregistrer</button>
         <a href="{{ path('app_login') }}" class="btn-back">Retour</a>
 
         {{ form_end(registrationForm) }}
