--- a/templates/registration/index.html.twig
+++ b/templates/registration/index.html.twig
@@ -7,7 +7,7 @@
         /* Styles généraux pour le corps de la page */
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f7fa;
+            background-color: #FFFFFF;
             margin: 0;
             padding: 0;
         }
@@ -18,6 +18,7 @@
             margin: 50px auto;
             padding: 20px;
             background-color: #ffffff;
+            border: 1px solid #ddd;
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
@@ -90,7 +91,7 @@
     </style>
 
     <div class="form-container">
-        <h1>Register</h1>
+        <h1>S'enregistrer</h1>
 
 
         {{ form_start(registrationForm) }}
